test/expect/cmd.cc-msvc-c-bad-cmd.stderr.txt
^error: '--castxml-cc-msvc-c' compiler command failed:

 'cc-msvc-c-bad-cmd' '-c' '-FoNUL' '.*/share/castxml/detect_vs.c
